@@ -23,13 +23,14 @@ is(
 
 isnt(
   $e = exception {
-   $handle = Data::Handle->new('Data_Not_There');
+    $handle = Data::Handle->new('Data_Not_There');
   },
   undef,
   "->new on a valid package with an Data_Not_There asplodes"
 );
 
 isa_ok( $e, 'Data::Handle::Exception' );
+diag( "\n\n** This is an example Exception, isn't it pretty?\n\n" . $e );
 
 $handle = Data::Handle->new('Data');
 
@@ -51,23 +52,26 @@ is(
   'Slurp contents works'
 );
 
-my ($left, $right);
-my ($leftreader, $rightreader);
+my ( $left,       $right );
+my ( $leftreader, $rightreader );
 
-is( $e = exception {
+is(
+  $e = exception {
 
-        $leftreader = Data::Handle->new('Data');
-        $rightreader = Data::Handle->new('Data');
+    $leftreader  = Data::Handle->new('Data');
+    $rightreader = Data::Handle->new('Data');
 
-        while( !eof( $leftreader ) ){
-            $left .= <$leftreader>;
-            $right .= <$rightreader>;
-        }
+    while ( !eof($leftreader) ) {
+      $left  .= <$leftreader>;
+      $right .= <$rightreader>;
+    }
 
+  },
+  undef,
+  'Dual Reading lives'
+);
 
-}, undef, 'Dual Reading lives' );
-
-is( $left, $right , 'Left and Right dual-read outputs are the same');
+is( $left,            $right,            'Left and Right dual-read outputs are the same' );
 is( tell $leftreader, tell $rightreader, 'Left and right dual-read are at the same position after reading' );
 
 done_testing;
