@@ -14,6 +14,18 @@ Revision history for {{$dist->name}}
           *( so far ) don't work. If people can get them to work (on all perls), that'd be great!.
           ( Seems there are many weird fdup bugs in perl )
 
+          Stolen the backtrace code from Carp a bit and augmented it, now produce useful backtraces.
+
+          Have some nice code in our exception stringification that highlights lines with colours based on
+          how much we think they're related to the problem.
+
+            Stuff thats part of DH ( the place the error was detected ) is highlighted green as we think it
+            will be usefull in diagnosis, but its not the source of the problem.
+
+            Stuff that we know is likely to be infrastructural and not likely to be part of the problem
+            ( ie: code like Try::Tiny and Test::Fatal ) are highlighted yellow because we doubt its useful.
+
+            Everything else is left white, and you should look for the problem there first.
 
 0.01011322 2010-12-18 23:14:03 Pacific/Auckland
           First version.
